--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.42.6"
+    "sass": "^1.43.2",
+    "svelte": "^3.42.6",
+    "svelte-preprocess": "^4.9.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.0.0-beta3",
+    "uuid": "^8.3.2"
+  }
 }
